# ooxmlsdk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  check_particle_alignment.py
crates/ooxmlsdk/: Cargo.toml  build.rs
crates/ooxmlsdk-build/: Cargo.toml
crates/ooxmlsdk-build/benches/: serde_bench.rs
crates/ooxmlsdk-build/src/: lib.rs  models.rs  sdk_code.rs  sdk_data.rs  simple_type.rs  utils.rs
crates/ooxmlsdk-build/src/generator/: context.rs  deserializer.rs  mod.rs  open_xml_part.rs  open_xml_schema.rs  serializer.rs  validator.rs
crates/ooxmlsdk-build/src/includes/: common.rs  deserializer_common.rs  deserializers.rs  mod.rs  serializer_common.rs  simple_type.rs  test.rs
crates/ooxmlsdk-build/src/models/: sdk_data.rs
crates/ooxmlsdk-build/src/sdk_code/: codegen_ir.rs  codegen_ir_builder.rs  deserializer.rs  helpers.rs  package_schemas.rs  part_codegen_ir.rs  particle_builder.rs  parts.rs  schemas.rs  serializer.rs  simple_type_mapping.rs  versioning.rs
crates/ooxmlsdk-build/src/sdk_data/: compatibility.rs  context.rs  mce.rs  opc_schemas.rs  open_xml.rs  package_schemas.rs  part_extensions.rs  parts.rs  schema_extensions.rs  schemas.rs  sdk_data_model.rs  xsd.rs
crates/ooxmlsdk-derive/: Cargo.toml
crates/ooxmlsdk-derive/src/: lib.rs  mce_process_content_mapping.rs  namespaces.rs  sdk_choice.rs  sdk_enum.rs  sdk_package.rs  sdk_part.rs  sdk_part_ref.rs  sdk_type.rs  sdk_validator.rs  sdk_xml_namespace.rs  simple_type_mapping.rs
crates/ooxmlsdk-fonts/: Cargo.toml
crates/ooxmlsdk-fonts/src/: error.rs  lib.rs  model.rs
crates/ooxmlsdk-formula/: Cargo.toml
crates/ooxmlsdk-formula/src/: address.rs  code.rs  dependency.rs  error.rs  evaluator.rs  function.rs  lib.rs  model.rs  parser.rs  program.rs  provider.rs  source.rs  symbol.rs  value.rs
crates/ooxmlsdk-formula/src/calc/: combinatorics.rs  complex.rs  datetime.rs  financial.rs  fourier.rs  matrix.rs  mod.rs  numeric.rs  query.rs  radix.rs  regression.rs  special.rs  statistics.rs  text.rs  units.rs
crates/ooxmlsdk-formula/src/evaluator/: ast.rs  context.rs  engine.rs  query.rs  stack.rs
crates/ooxmlsdk-formula/src/function/: args.rs  dispatch.rs  reader.rs
crates/ooxmlsdk-formula/src/model/: evaluator.rs
crates/ooxmlsdk-formula/src/parser/: array.rs  ast.rs  formula.rs  lex.rs  lower.rs  reference.rs  semantic.rs  shared.rs  syntax.rs  table.rs
crates/ooxmlsdk-formula/src/program/: syntax.rs
crates/ooxmlsdk-layout/: Cargo.toml
crates/ooxmlsdk-layout/examples/: generate_preset_shape_data.rs
crates/ooxmlsdk-layout/src/: common.rs  compat.rs  docx.rs  error.rs  fonts.rs  lib.rs  model.rs  options.rs  pptx.rs  render.rs  text_layout.rs  text_metrics.rs  units.rs  xlsx.rs
crates/ooxmlsdk-layout/src/common/: color_math.rs  debug.rs  display.rs  drawingml_custom_geometry.rs  drawingml_geometry.rs  drawingml_pattern.rs  drawingml_preset_data.rs  drawingml_preset_data_generated.rs  drawingml_preset_geometry.rs  drawingml_stroke.rs  from_compat.rs  geom.rs  mod.rs  style.rs  units.rs
crates/ooxmlsdk-pdf/: Cargo.toml
crates/ooxmlsdk-pdf-test/: Cargo.toml
crates/ooxmlsdk-pdf-test/src/: compare.rs  lib.rs  libreoffice.rs  pdf_extract.rs  render.rs  report.rs
crates/ooxmlsdk-pdf-test/tests/: core_docx_pdf_fixtures.rs  libreoffice_fixtures.rs  mapped_docx_pdf_fixtures.rs  mapped_pptx_pdf_fixtures.rs  mapped_xlsx_pdf_fixtures.rs  pdfexport_fixtures.rs
crates/ooxmlsdk-pdf/examples/: docx_to_pdf.rs
crates/ooxmlsdk-pdf/src/: diagnostics.rs  error.rs  fonts.rs  lib.rs  options.rs  pptx.rs  text_metrics.rs  units.rs  xlsx.rs
crates/ooxmlsdk-test/: Cargo.toml  UPSTREAM_TEST_MATRIX.md  build.rs
crates/ooxmlsdk-test/benches/: packages.rs  perf.rs  xml.rs
crates/ooxmlsdk-test/doc_samples/: master_altcontent.pptx  notes_altcontent.pptx
crates/ooxmlsdk-test/examples/: create_fixtures.rs
crates/ooxmlsdk-test/samples/: custom_properties_bool.xml  extended_properties_more_doc_props.xml  extended_properties_titles_of_parts.xml  opc_core_properties_hello_world.xml  opc_core_properties_more_doc_props.xml  presentation_non_visual_drawing_properties.xml  presentation_presentation.xml  spreadsheet_cell_value_boolean.xml  spreadsheet_cell_value_datetime.xml  spreadsheet_cell_value_datetime_offset.xml  spreadsheet_cell_value_decimal_exponential.xml  spreadsheet_cell_value_double.xml  spreadsheet_cell_value_double_exponential.xml  spreadsheet_cell_value_int.xml  spreadsheet_cell_value_int_exponential.xml  spreadsheet_color_scale.xml  spreadsheet_shared_string_table.xml  spreadsheet_shared_string_table_empty.xml  spreadsheet_workbook.xml  spreadsheet_workbook_complex01.xml  spreadsheet_worksheet_complex01_sheet1.xml  wordprocessing_comments.xml  wordprocessing_document.xml  wordprocessing_document_comments.xml  wordprocessing_document_document.xml  wordprocessing_document_formatted.xml  wordprocessing_document_hello_o14.xml  wordprocessing_document_hello_world.xml  wordprocessing_document_hyperlink.xml  wordprocessing_document_plain.xml  wordprocessing_document_simple_sdt.xml  wordprocessing_document_trailing_comment.xml  wordprocessing_document_trailing_whitespace.xml  wordprocessing_document_two_paragraphs.xml  wordprocessing_document_whitespace_text.xml  wordprocessing_paragraph.xml  wordprocessing_paragraph_only_run.xml  wordprocessing_paragraph_rsid_order_1.xml  wordprocessing_paragraph_rsid_order_2.xml  wordprocessing_paragraph_rsid_p_002.xml  (+5 more)
crates/ooxmlsdk-test/src/: fixtures.rs  lib.rs
crates/ooxmlsdk-test/tests/: doc_samples.rs  file_validators.rs  markup_compatibility_calibration.rs  packages.rs  presentation.rs  properties.rs  round_trip.rs  simple_types.rs  spreadsheet.rs  validators.rs  wordprocessing.rs
crates/ooxmlsdk/src/: common.rs  lib.rs  mce.rs  namespaces.rs  parts.rs  schemas.rs  sdk.rs  simple_type.rs  units.rs  validator.rs
examples/write_docx/: Cargo.toml
examples/write_docx/src/: main.rs
examples/write_xlsx/: Cargo.toml
examples/write_xlsx/src/: main.rs
sdk_data/: compatibility.json  (+1 more)
(+683 files in other folders)
