[workspace]
resolver = "3"
members = [
  "crates/ooxmlsdk",
  "crates/ooxmlsdk-build",
  "crates/ooxmlsdk-derive",
  "crates/ooxmlsdk-pdf",
  "crates/ooxmlsdk-pdf-test",
  "crates/ooxmlsdk-test",
]

[workspace.package]
version = "0.10.0"
edition = "2024"
rust-version = "1.88"
authors = ["KaiserY"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/ooxmlsdk"
documentation = "https://docs.rs/ooxmlsdk"
description = "Open XML SDK for Rust"
keywords = ["xml", "office", "docx", "pptx", "xlsx"]
categories = ["parser-implementations"]
readme = "README.md"

[workspace.dependencies]
ooxmlsdk = { version = "0.10.0", path = "crates/ooxmlsdk", default-features = false }
ooxmlsdk-build = { version = "0.10.0", path = "crates/ooxmlsdk-build" }
ooxmlsdk-derive = { version = "0.10.0", path = "crates/ooxmlsdk-derive" }
ooxmlsdk-pdf = { version = "0.10.0", path = "crates/ooxmlsdk-pdf" }
ooxmlsdk-pdf-test = { version = "0.10.0", path = "crates/ooxmlsdk-pdf-test" }
ooxmlsdk-test = { version = "0.10.0", path = "crates/ooxmlsdk-test" }
base64 = "0.22.1"
quick-xml = "0.40.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.150"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
heck = "0.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
thiserror = "2.0.18"
criterion = "0.8.2"
crc32fast = "1.5.0"
flate2 = "1.1.9"
lopdf = "0.41.0"
pdfium-render = "0.9.1"
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
png = "0.18.1"
walkdir = "2.5.0"
toml = "1.1"
fontdb = "0.23"
hypher = "0.1.7"
icu_segmenter = { version = "2.2", features = ["compiled_data"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
krilla = { version = "0.6.0", default-features = false, features = ["raster-images", "pdf", "simple-text"] }
krilla-svg = "0.3.0"
libm = "0.2.16"
rustybuzz = "0.20.1"
ttf-parser = "0.25.1"
unicode-bidi = "0.3.18"
unicode-script = "0.5"

[profile.dev]
incremental = false
