[workspace]
resolver = "3"
members = [
  "crates/ooxmlsdk",
  "crates/ooxmlsdk-build",
  "crates/ooxmlsdk-derive",
  "crates/ooxmlsdk-fonts",
  "crates/ooxmlsdk-formula",
  "crates/ooxmlsdk-layout",
  "crates/ooxmlsdk-pdf",
]

[workspace.package]
version = "0.12.0"
edition = "2024"
rust-version = "1.88"
authors = ["KaiserY"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/ooxmlsdk"
documentation = "https://docs.rs/ooxmlsdk"
description = "OOXML SDK for Rust"
keywords = ["openxml", "office", "docx", "pptx", "xlsx"]
categories = ["parser-implementations"]
readme = "README.md"

[workspace.dependencies]
ooxmlsdk = { version = "0.12.0", path = "crates/ooxmlsdk", default-features = false }
ooxmlsdk-build = { version = "0.12.0", path = "crates/ooxmlsdk-build" }
ooxmlsdk-derive = { version = "0.12.0", path = "crates/ooxmlsdk-derive" }
ooxmlsdk-fonts = { version = "0.12.0", path = "crates/ooxmlsdk-fonts" }
ooxmlsdk-formula = { version = "0.12.0", path = "crates/ooxmlsdk-formula" }
ooxmlsdk-layout = { version = "0.12.0", path = "crates/ooxmlsdk-layout" }
ooxmlsdk-pdf = { version = "0.12.0", path = "crates/ooxmlsdk-pdf" }
emfsdk = { version = "0.2.0", features = ["render"] }
base64 = "0.22.1"
bitflags = "2.13.0"
bytes = "1.12.1"
itoa = "1.0.18"
lexical-parse-float = "1.0.6"
quick-xml = "0.41.0"
regex = "1.12.4"
rustc-hash = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.150"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full"] }
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
heck = "0.5.0"
smallvec = "1.15.2"
zip = { version = "8.6.0", default-features = false, features = [
  "deflate-flate2-zlib-rs",
] }
thiserror = "2.0.18"
zmij = "1.0.21"
criterion = "0.8.2"
encoding_rs = "0.8.35"
lopdf = "0.43.0"
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
png = "0.18.1"
toml = "1.1.2"
fontdb = "0.23.0"
hypher = "0.1.7"
icu_collator = { version = "2.2.1", features = ["compiled_data"] }
icu_locale = { version = "2.2.0", features = ["compiled_data"] }
icu_properties = { version = "2.2.0", features = ["compiled_data"] }
icu_segmenter = { version = "2.2.0", features = ["compiled_data"] }
image = { version = "0.25.10", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
  "webp",
] }
krilla = { version = "0.6.0", default-features = false, features = [
  "raster-images",
  "pdf",
  "simple-text",
] }
krilla-svg = "0.3.0"
libm = "0.2.16"
num-complex = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
rustfft = "6.4.1"
rustybuzz = "0.20.1"
statrs = { version = "0.18.0", default-features = false }
ttf-parser = "0.25.1"
unicode-bidi = "0.3.18"
unicode-script = "0.5.8"
winnow = "1.0.3"
yoke = { version = "0.8.3", features = ["derive"] }

[profile.dev]
incremental = false
