[workspace]
resolver = "3"
members = [
  "crates/ooxmlsdk",
  "crates/ooxmlsdk-build",
  "crates/ooxmlsdk-derive",
  "crates/ooxmlsdk-fonts",
  "crates/ooxmlsdk-formula",
  "crates/ooxmlsdk-layout",
  "crates/ooxmlsdk-pdf",
]

[workspace.package]
version = "0.12.0"
edition = "2024"
rust-version = "1.88"
authors = ["KaiserY"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/ooxmlsdk"
documentation = "https://docs.rs/ooxmlsdk"
description = "OOXML SDK for Rust"
keywords = ["openxml", "office", "docx", "pptx", "xlsx"]
categories = ["parser-implementations"]
readme = "README.md"

[workspace.dependencies]
ooxmlsdk = { version = "0.12.0", path = "crates/ooxmlsdk", default-features = false }
ooxmlsdk-build = { version = "0.12.0", path = "crates/ooxmlsdk-build" }
ooxmlsdk-derive = { version = "0.12.0", path = "crates/ooxmlsdk-derive" }
ooxmlsdk-fonts = { version = "0.12.0", path = "crates/ooxmlsdk-fonts" }
ooxmlsdk-formula = { version = "0.12.0", path = "crates/ooxmlsdk-formula" }
ooxmlsdk-layout = { version = "0.12.0", path = "crates/ooxmlsdk-layout" }
ooxmlsdk-pdf = { version = "0.12.0", path = "crates/ooxmlsdk-pdf" }
emfsdk = { version = "0.2.0", features = ["render"] }
base64 = "0.22.1"
bitflags = "2.13.1"
bytes = "1.12.1"
itoa = "1.0.18"
lexical-parse-float = "1.0.6"
quick-xml = "0.41.0"
regex = "1.13.1"
rustc-hash = "2.1.3"
serde = { version = "1.0.229", features = ["derive"] }
serde_derive = "1.0.229"
serde_json = "1.0.151"
quote = "1.0.47"
syn = { version = "3.0.2", features = ["full"] }
prettyplease = "0.3.0"
proc-macro2 = "1.0.107"
heck = "0.5.0"
smallvec = "1.15.2"
zip = { version = "8.6.0", default-features = false, features = [
  "deflate-flate2-zlib-rs",
] }
thiserror = "2.0.19"
zmij = "1.0.23"
criterion = "0.8.2"
encoding_rs = "0.8.35"
lopdf = "0.44.0"
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
png = "0.18.1"
toml = "1.1.3"
fontdb = "0.23.0"
harfrust = { version = "0.12.0", default-features = false, features = ["std"] }
hypher = "0.1.7"
icu_collator = { version = "2.2.1", features = ["compiled_data"] }
icu_locale = { version = "2.2.0", features = ["compiled_data"] }
icu_properties = { version = "2.2.0", features = ["compiled_data"] }
icu_segmenter = { version = "2.2.0", features = ["compiled_data"] }
image = { version = "0.25.10", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
  "webp",
] }
jpeg-encoder = "0.7.0"
krilla = { version = "0.8.2", default-features = false, features = [
  "raster-images",
  "pdf",
  "rayon",
  "simple-text",
] }
krilla-svg = "0.8.1"
libm = "0.2.16"
num-complex = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
parley = { version = "0.11.0", default-features = false, features = [
  "std",
  "complex-scripts",
] }
rustfft = "6.4.1"
statrs = { version = "0.18.0", default-features = false }
ttf-parser = "0.25.1"
unicode-bidi = "0.3.18"
unicode-script = "0.5.8"
usvg = { version = "0.47.0", default-features = false, features = ["text"] }
winnow = "1.0.4"
yoke = { version = "0.8.3", features = ["derive"] }

[profile.dev]
incremental = false
