[package]
name = "ooxmlsdk-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["parts", "validators"]
schemas = []
serializers = ["schemas"]
deserializers = ["schemas"]
parts = ["schemas", "serializers", "deserializers", "packages", "dep:zip"]
validators = ["schemas"]
packages = []

[dependencies]
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true, optional = true }
path-clean = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "serde_bench"
harness = false
