[package]
name = "ooxmlsdk-build"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["parts"]
parts = ["dep:zip"]

[dependencies]
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true, optional = true }
