[package]
name = "ooxmlsdk-formula"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "SpreadsheetML formula and workbook value model for ooxmlsdk"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
libm = { workspace = true }
ooxmlsdk = { workspace = true, features = ["parts"] }
rustfft = { workspace = true }
statrs = { workspace = true }
thiserror = { workspace = true }
