[package]
name = "ooxmlsdk-formula"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "SpreadsheetML formula and workbook value model for ooxmlsdk"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
encoding_rs = { workspace = true }
icu_collator = { workspace = true }
icu_locale = { workspace = true }
icu_properties = { workspace = true }
libm = { workspace = true }
num-complex = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
ooxmlsdk = { workspace = true, features = ["parts"] }
regex = { workspace = true }
rustfft = { workspace = true }
statrs = { workspace = true }
thiserror = { workspace = true }
