[package]
name = "ooxmlsdk-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Office layout trees, page trees, display lists, and debug dumps for ooxmlsdk"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
emfsdk = { workspace = true }
hypher = { workspace = true }
icu_segmenter = { workspace = true }
image = { workspace = true }
ooxmlsdk = { workspace = true, features = ["parts"] }
ooxmlsdk-fonts = { workspace = true }
ooxmlsdk-formula = { workspace = true }
parley = { workspace = true }
quick-xml = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
unicode-bidi = { workspace = true }
unicode-script = { workspace = true }
