[package]
name = "ooxmlsdk-test"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = ["parts"]
parts = ["ooxmlsdk/parts"]
validators = ["ooxmlsdk/validators"]
mce = ["ooxmlsdk/mce"]

[dependencies]
ooxmlsdk = { workspace = true, default-features = false }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true }

[[bench]]
name = "perf"
harness = false
required-features = ["parts"]
