[package]
name = "ooxmlsdk-test"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["parts"]
parts = ["ooxmlsdk/parts"]
flat-opc = ["parts", "ooxmlsdk/flat-opc"]
validators = ["ooxmlsdk/validators"]
mce = ["ooxmlsdk/mce"]

[dependencies]
ooxmlsdk = { workspace = true, default-features = false }

[dev-dependencies]
criterion = { workspace = true }
zip = { workspace = true }
base64 = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }

[[bench]]
name = "perf"
harness = false
required-features = ["parts"]

[[example]]
name = "create_fixtures"
