[package]
name = "ooxmlsdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["docx", "xlsx", "pptx", "office2007", "parts"]
schemas = ["ooxmlsdk-build/schemas"]
parts = ["schemas", "dep:zip", "ooxmlsdk-build/parts"]
validators = ["schemas", "ooxmlsdk-build/validators"]
docx = ["ooxmlsdk-build/docx"]
xlsx = ["ooxmlsdk-build/xlsx"]
pptx = ["ooxmlsdk-build/pptx"]
office2007 = ["ooxmlsdk-build/office2007"]
office2010 = ["ooxmlsdk-build/office2010"]
office2013 = ["ooxmlsdk-build/office2013"]
office2016 = ["ooxmlsdk-build/office2016"]
office2019 = ["ooxmlsdk-build/office2019"]
office2021 = ["ooxmlsdk-build/office2021"]
microsoft365 = ["ooxmlsdk-build/microsoft365"]

[dependencies]
quick-xml = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true, optional = true }

[build-dependencies]
ooxmlsdk-build = { workspace = true }
