[package]
name = "ooxmlsdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["microsoft365", "parts"]
parts = ["dep:base64", "dep:zip"]
microsoft365 = []
validators = ["dep:regex"]
mce = ["parts"]

[dependencies]
base64 = { workspace = true, optional = true }
ooxmlsdk-derive = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true, optional = true }
thiserror = { workspace = true }
zip = { workspace = true, optional = true }
