[package]
name = "write_xlsx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
ooxmlsdk = { workspace = true, features = ["xlsx", "office2007", "parts"] }
